sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value j
    for(j <- 0 to (getNombreValeurs-(2+j))){
                                       ^